apps/vault/base/05-vault-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: vault
  labels:
    app: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      serviceAccountName: vault
      containers:
        - name: vault
          image: hashicorp/vault:1.17.2
          ports:
            - containerPort: 8200
              name: vault-ui
              protocol: TCP
            - containerPort: 8201
              name: vault-cluster
              protocol: TCP
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
          volumeMounts:
            - name: vault-data
              mountPath: /vault/data
            - name: vault-config
              mountPath: /vault/config
          command:
            - vault
            - server
            - -config=/vault/config/vault.hcl
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /v1/sys/health?standbyok=true&sealedcode=200&uninitcode=200
              port: 8200
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /v1/sys/health?standbyok=true&sealedcode=200&uninitcode=200
              port: 8200
            initialDelaySeconds: 10
            periodSeconds: 20
      volumes:
        - name: vault-data
          persistentVolumeClaim:
            claimName: vault-data-pvc
        - name: vault-config
          configMap:
            name: vault-config
