apps/vault/base/04-vault-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-service
  namespace: vault
  labels:
    app: vault
spec:
  ports:
    - name: vault-ui
      port: 8200
      targetPort: 8200
      protocol: TCP
    - name: vault-cluster
      port: 8201
      targetPort: 8201
      protocol: TCP
  selector:
    app: vault
  type: ClusterIP
