apps/vault/base/06-vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: "default-https-redirect@kubernetescrd"
spec:
  rules:
    - host: hashi-vault.azhe.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault-service
                port:
                  number: 8200
